# acorn-julia2

./: construct_inputs.ipynb  gurobi.lic  load_shedding_1984.csv  load_shedding_1985.csv  run_acorn.sh  storage_assignment.csv  tmp_iav_rank.py
acorn-julia/: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml
acorn-julia/data/genX/: Selected_CPA_Capacity_Low_RE_Mod_Elec.csv  Selected_CPA_Capacity_Mod_RE_Mod_Elec.csv  genX_generators.csv
acorn-julia/data/grid/: README.md  branch_prop_boyuan.csv  branch_prop_liu_etal_2024.csv  bus_prop_liu_etal_2024.csv  gen_prop_kabir_2024.csv  gen_prop_liu_etal_2024.csv  if_lim_map_boyuan.csv  if_lim_map_vivienne.csv  npcc_new.csv
acorn-julia/data/wind/: nrel_power_curves.csv
acorn-julia/docs/: coupling_to_GenX.md  gen_modeling.md  load_modeling.md  todo.md
acorn-julia/runs/low_RE_high_elec_iter0/: NG_matching.txt  config.yml  construct_inputs.ipynb  run_acorn.sh
acorn-julia/runs/low_RE_mod_elec_iter0/: NG_matching.txt  config.yml  construct_inputs.ipynb  run_acorn.sh
acorn-julia/runs/mod_RE_mod_elec_iter0/: NG_matching.txt  config.yml  construct_inputs.ipynb  run_acorn.sh
acorn-julia/scripts/: 04_run_acorn.jl  04_run_acorn_sequence.jl  05_plots.ipynb  compute_wind_stability.py  make_seasonal.jl  run_wind_stability.sh
acorn-julia/scripts/01_data_download/: 01_nyiso_load.py  02_nrel_sind.sh  03_nrel_wtk.sh  04_im3_tgw.md  05_nrel_resstock.sh  06_nrel_comstock.sh  07_nys_gis.sh
acorn-julia/scripts/02_load_modeling/: 01_baseline.ipynb
acorn-julia/scripts/03_gen_modeling/: hydro.ipynb  solar.ipynb  (+1 more)
(+852 files in other folders)
